poc-ping-loki/app/deployment.yaml
# Deployment for the API Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: monitoring
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: api
        # IMPORTANT: Replace with the actual image name from your Docker build and registry
        image: user-api:1.0.1
        ports:
        - containerPort: 3002
        # env: # Uncomment and add env vars if using a .env file in Compose
        # - name: MY_ENV_VAR
        #   valueFrom:
        #     configMapKeyRef:
        #       name: api-config # Assuming you create an api-config ConfigMap
        #       key: MY_ENV_VAR
        args:
        - sh
        - -c
        - 'uvicorn main:app --host 0.0.0.0 --port 3002 2>&1 | tee /var/log/containers/user-service.log' # Replicate compose command to log to shared volume
        volumeMounts:
        - name: shared-logs-volume
          mountPath: /var/log/containers
      volumes:
      - name: shared-logs-volume
        persistentVolumeClaim:
          claimName: shared-logs-pvc
