poc-ping-loki/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: tt
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: LoadBalancer
